Added scaffold cables for using covers cosmetically. Added silk touch and smelting as attributes to the mining drill. Added some recipes. Fixed bug with axe tab slot placement.

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -414,6 +414,7 @@
 	"block.staticpower.cable_heat_silver": "Silver Heat Pipe",
 	"block.staticpower.cable_heat_gold": "Gold Heat Pipe",
 	"block.staticpower.cable_heat_aluminium": "Aluminium Heat Pipe",
+	"block.staticpower.cable_scaffold": "Scaffold",
 	"block.staticpower.tank_basic": "Tank",
 	"block.staticpower.digistore": "Digistore",
 	"block.staticpower.digistore_io_port": "Digistore I/O Port",
@@ -564,6 +565,8 @@
 	"gui.staticpower.fortune": "Fortune",
 	"gui.staticpower.haste": "Haste",
 	"gui.staticpower.grinding": "Grinding",
+	"gui.staticpower.smelting": "Smelting",
+	"gui.staticpower.silk_touch": "Silk Touch",
 	"gui.staticpower.attributes": "Attributes",
 	"gui.staticpower.hold_shift": "Hold Shift",
 	"gui.staticpower.hold_control": "Hold Control",
