Added different tiers of tanks

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -416,6 +416,11 @@
 	"block.staticpower.cable_heat_aluminium": "Aluminium Heat Pipe",
 	"block.staticpower.cable_scaffold": "Scaffold",
 	"block.staticpower.tank_basic": "Tank",
+	"block.staticpower.tank_advanced": "Advanced Tank",
+	"block.staticpower.tank_static": "Static Tank",
+	"block.staticpower.tank_energized": "Energized Tank",
+	"block.staticpower.tank_lumum": "Lumum Tank",
+	"block.staticpower.tank_creative": "Creative Tank",
 	"block.staticpower.digistore": "Digistore",
 	"block.staticpower.digistore_io_port": "Digistore I/O Port",
 	"block.staticpower.digistore_manager": "Digistore Manager",
