Added in preliminary chainsaw

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -67,11 +67,24 @@
 	"item.staticpower.drill_bit_energized": "Energized Drill Bit",
 	"item.staticpower.drill_bit_lumum": "Lumum Drill Bit",
 	"item.staticpower.drill_bit_creative": "Creative Drill Bit",
+	"item.staticpower.chainsaw_blade_iron": "Iron Chainsaw Blade",
+	"item.staticpower.chainsaw_blade_bronze": "Bronze Chainsaw Blade",
+	"item.staticpower.chainsaw_blade_advanced": "Advanced Chainsaw Blade",
+	"item.staticpower.chainsaw_blade_tungsten": "Tungsten Chainsaw Blade",
+	"item.staticpower.chainsaw_blade_static": "Static Chainsaw Blade",
+	"item.staticpower.chainsaw_blade_energized": "Energized Chainsaw Blade",
+	"item.staticpower.chainsaw_blade_lumum": "Lumum Chainsaw Blade",
+	"item.staticpower.chainsaw_blade_creative": "Creative Chainsaw Blade",
 	"item.staticpower.mining_drill_basic": "Mining Drill",
 	"item.staticpower.mining_drill_advanced": "Advanced Mining Drill",
 	"item.staticpower.mining_drill_static": "Static Mining Drill",
 	"item.staticpower.mining_drill_energized": "Energized Mining Drill",
 	"item.staticpower.mining_drill_lumum": "Lumum Mining Drill",
+	"item.staticpower.chainsaw_basic": "Chainsaw",
+	"item.staticpower.chainsaw_advanced": "Advanced Chainsaw",
+	"item.staticpower.chainsaw_static": "Static Chainsaw",
+	"item.staticpower.chainsaw_energized": "Energized Chainsaw",
+	"item.staticpower.chainsaw_lumum": "Lumum Chainsaw",
 	"item.staticpower.processor_basic": "Basic Processor",
 	"item.staticpower.processor_advanced": "Advanced Processor",
 	"item.staticpower.processor_static": "Static Processor",
