Added texture layering system for attributable items. Implemented example for drill bit.

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -60,9 +60,6 @@
 	"item.staticpower.drill_bit_bronze": "Bronze Drill Bit",
 	"item.staticpower.drill_bit_advanced": "Advanced Drill Bit",
 	"item.staticpower.drill_bit_tungsten": "Tungsten Drill Bit",
-	"item.staticpower.drill_bit_diamond": "Diamond Drill Bit",
-	"item.staticpower.drill_bit_ruby": "Ruby Drill Bit",
-	"item.staticpower.drill_bit_sapphire": "Sapphire Drill Bit",
 	"item.staticpower.drill_bit_static": "Static Drill Bit",
 	"item.staticpower.drill_bit_energized": "Energized Drill Bit",
 	"item.staticpower.drill_bit_lumum": "Lumum Drill Bit",
@@ -531,6 +528,15 @@
 	"fluid.staticpower.honey": "Honey",
 	"fluid.staticpower.concrete": "Concrete",
 	"fluid.staticpower.latex": "Latex",
+	"attribute.staticpower.fortune": "Fortune",
+	"attribute.staticpower.haste": "Haste",
+	"attribute.staticpower.grinding": "Grinding",
+	"attribute.staticpower.smelting": "Smelting",
+	"attribute.staticpower.silk_touch": "Silk Touch",
+	"attribute.staticpower.hardened_diamond": "Hardened",
+	"attribute.staticpower.hardened_ruby": "Hardened",
+	"attribute.staticpower.hardened_sapphire": "Hardened",
+	"attribute.staticpower.hardened_emerald": "Hardened",
 	"gui.staticpower.empty": "Empty",
 	"gui.staticpower.input": "Input",
 	"gui.staticpower.max_input": "Max Input",
@@ -588,11 +594,6 @@
 	"gui.staticpower.mining_speed": "Mining Speed",
 	"gui.staticpower.active": "Active",
 	"gui.staticpower.inactive": "Inactive",
-	"gui.staticpower.fortune": "Fortune",
-	"gui.staticpower.haste": "Haste",
-	"gui.staticpower.grinding": "Grinding",
-	"gui.staticpower.smelting": "Smelting",
-	"gui.staticpower.silk_touch": "Silk Touch",
 	"gui.staticpower.attributes": "Attributes",
 	"gui.staticpower.hold_shift": "Hold Shift",
 	"gui.staticpower.hold_control": "Hold Control",
