Added attribute layers for chainsaw and implemented hardened attribute.

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -358,6 +358,7 @@
 	"item.staticpower.upgrade_quarrying_energized": "Energized Quarry Upgrade",
 	"item.staticpower.upgrade_quarrying_lumum": "Lumum Quarry Upgrade",
 	"item.staticpower.grinder_component": "Grinder Component",
+	"item.staticpower.portable_smelting_core": "Portable Smelting Core",
 	"block.staticpower.grass_static": "Static Grass",
 	"block.staticpower.grass_energized": "Energized Grass",
 	"block.staticpower.grass_lumum": "Lumum Static",
@@ -589,6 +590,7 @@
 	"gui.staticpower.tier": "Tier",
 	"gui.staticpower.mining_tier": "Mining Tier",
 	"gui.staticpower.block_remaining": "Blocks Remaining",
+	"gui.staticpower.durability": "Durability",
 	"gui.staticpower.max_drillable_blocks": "Max Blocks Drilled",
 	"gui.staticpower.efficiency": "Efficiency",
 	"gui.staticpower.mining_speed": "Mining Speed",
