Added in lathe but noticed but with NBT depth. Need to investigate!

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -380,7 +380,6 @@
 	"block.staticpower.log_static": "Static Log",
 	"block.staticpower.log_energized": "Energized Log",
 	"block.staticpower.log_lumum": "Lumum Log",
-	"block.staticpower.machine_charging_station": "Charging Station",
 	"block.staticpower.chest_vacuum": "Vacuum Chest",
 	"block.staticpower.machine_powered_furnace": "Powered Furnace",
 	"block.staticpower.machine_powered_grinder": "Powered Grinder",
@@ -398,6 +397,8 @@
 	"block.staticpower.machine_centrifuge": "Centrifuge",
 	"block.staticpower.machine_fusion_furnace": "Fusion Furnace",
 	"block.staticpower.machine_auto_smith": "Auto Smith",
+	"block.staticpower.machine_charging_station": "Charging Station",
+	"block.staticpower.machine_lathe": "Lathe",
 	"block.staticpower.soldering_table": "Soldering Table",
 	"block.staticpower.machine_industrial_soldering_table": "Industrial Solderer",
 	"block.staticpower.machine_industrial_crafting_table": "Industrial Crafter",
