Added bed frame.

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -368,6 +368,7 @@
 	"item.staticpower.upgrade_quarrying_lumum": "Lumum Quarry Upgrade",
 	"item.staticpower.grinder_component": "Grinder Component",
 	"item.staticpower.portable_smelting_core": "Portable Smelting Core",
+	"item.staticpower.bed_frame": "Bed Frame",
 	"block.staticpower.grass_static": "Static Grass",
 	"block.staticpower.grass_energized": "Energized Grass",
 	"block.staticpower.grass_lumum": "Lumum Static",
