Added in gear box. Added new UI for the solar panel and cleaned up the solar panel logic to respect rain and sky visibility. Added probability output as a new JEI ingredient type, so tooltips should be cleaner now. JEI will also render the percentage chance and bonus directly on the slot. Couple other minor tweaks and fixes.

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -221,6 +221,24 @@
 	"item.staticpower.gear_redstone_alloy": "Redstone Alloy Gear",
 	"item.staticpower.gear_brass": "Brass Gear",
 	"item.staticpower.gear_bronze": "Bronze Gear",
+	"item.staticpower.gear_box_gold": "Gold Gear Box",
+	"item.staticpower.gear_box_iron": "Iron Gear Box",
+	"item.staticpower.gear_box_copper": "Copper Gear Box",
+	"item.staticpower.gear_box_tin": "Tin Gear Box",
+	"item.staticpower.gear_box_silver": "Silver Gear Box",
+	"item.staticpower.gear_box_lead": "Lead Gear Box",
+	"item.staticpower.gear_box_platinum": "Platinum Gear Box",
+	"item.staticpower.gear_box_aluminium": "Aluminium Gear Box",
+	"item.staticpower.gear_box_zinc": "Zinc Gear Box",
+	"item.staticpower.gear_box_tungsten": "Tungsten Gear Box",
+	"item.staticpower.gear_box_magnesium": "Magnesium Gear Box",
+	"item.staticpower.gear_box_static": "Static Gear Box",
+	"item.staticpower.gear_box_energized": "Energized Gear Box",
+	"item.staticpower.gear_box_lumum": "Lumum Gear Box",
+	"item.staticpower.gear_box_inert_infusion": "Inert Infusion Gear Box",
+	"item.staticpower.gear_box_redstone_alloy": "Redstone Alloy Gear Box",
+	"item.staticpower.gear_box_brass": "Brass Gear Box",
+	"item.staticpower.gear_box_bronze": "Bronze Gear Box",
 	"item.staticpower.plate_gold": "Gold Plate",
 	"item.staticpower.plate_iron": "Iron Plate",
 	"item.staticpower.plate_copper": "Copper Plate",
@@ -247,6 +265,7 @@
 	"item.staticpower.mold_ingot": "Ingot Mold",
 	"item.staticpower.mold_nugget": "Nugget Mold",
 	"item.staticpower.mold_block": "Block Mold",
+	"item.staticpower.mold_drill_bit": "Drill Bit Mold",
 	"item.staticpower.cable_network_analyzer": "Cable Network Analyzer",
 	"item.staticpower.portable_battery_basic": "Basic Portable Battery",
 	"item.staticpower.portable_battery_advanced": "Advanced Portable Battery",
@@ -397,7 +416,6 @@
 	"item.staticpower.upgrade_quarrying_static": "Static Quarry Upgrade",
 	"item.staticpower.upgrade_quarrying_energized": "Energized Quarry Upgrade",
 	"item.staticpower.upgrade_quarrying_lumum": "Lumum Quarry Upgrade",
-	"item.staticpower.grinder_component": "Grinder Component",
 	"item.staticpower.portable_smelting_core": "Portable Smelting Core",
 	"item.staticpower.bed_frame": "Bed Frame",
 	"block.staticpower.grass_static": "Static Grass",
@@ -678,5 +696,12 @@
 	"gui.staticpower.cable_transfer_rate": "%1$d %2$s/s",
 	"gui.staticpower.max_transfer_rate": "Maximum Transfer Rate",
 	"gui.staticpower.item_cable_acceleration": "Acceleration: %1$d%%",
-	"gui.staticpower.item_cable_friction": "Friction: -%1$d%%"
+	"gui.staticpower.item_cable_friction": "Friction: -%1$d%%",
+	"gui.staticpower.day": "Day",
+	"gui.staticpower.sunset": "Sunset",
+	"gui.staticpower.night": "Night",
+	"gui.staticpower.sunrise": "Sunrise",
+	"gui.staticpower.rainy": "Rainy",
+	"gui.staticpower.snowy": "Snowy",
+	"gui.staticpower.clear": "Clear"
 }
