Overhauled heat system! Much for fun and exciting to play around with now!

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -431,6 +431,16 @@
 	"item.staticpower.upgrade_centrifuge_energized": "Energized Centrifuge Upgrade",
 	"item.staticpower.upgrade_centrifuge_lumum": "Lumum Centrifuge Upgrade",
 	"item.staticpower.upgrade_experience_vacuum": "Experience Vacuum Upgrade",
+	"item.staticpower.upgrade_heat_capacity_basic": "Basic Heat Capacity Upgrade",
+	"item.staticpower.upgrade_heat_capacity_advanced": "Advanced Heat Capacity Upgrade",
+	"item.staticpower.upgrade_heat_capacity_static": "Static Heat Capacity Upgrade",
+	"item.staticpower.upgrade_heat_capacity_energized": "Energized Heat Capacity Upgrade",
+	"item.staticpower.upgrade_heat_capacity_lumum": "Lumum Heat Capacity Upgrade",
+	"item.staticpower.upgrade_heat_basic": "Basic Heat Conductivity Upgrade",
+	"item.staticpower.upgrade_heat_advanced": "Advanced Heat Conductivity Upgrade",
+	"item.staticpower.upgrade_heat_static": "Static Heat Conductivity Upgrade",
+	"item.staticpower.upgrade_heat_energized": "Energized Heat Upgrade",
+	"item.staticpower.upgrade_heat_lumum": "Lumum Heat Upgrade",
 	"item.staticpower.upgrade_stack": "Stack Upgrade",
 	"item.staticpower.upgrade_accelerator": "Accelerator Upgrade",
 	"item.staticpower.upgrade_crafting": "Crafting Upgrade",
@@ -702,6 +712,8 @@
 	"gui.staticpower.item_tier.gold": "Gold",
 	"gui.staticpower.item_tier.netherite": "Netherite",
 	"gui.staticpower.tier": "Tier",
+	"gui.staticpower.ticks_remaining": "Ticks Remaining",
+	"gui.staticpower.missing_manager": "Manager Not Present!",
 	"gui.staticpower.mining_tier": "Mining Tier",
 	"gui.staticpower.block_remaining": "Blocks Remaining",
 	"gui.staticpower.durability": "Durability",
