Heat system is far more fun to play with. Numbers are far lower and easier to calculate in your head. The base miner now gets upgrades too that affect fuel usage. Starting work on overheating system.

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -111,6 +111,9 @@
 	"item.staticpower.pie_lumum": "Lumum Pie",
 	"item.staticpower.smutton_raw": "Raw S'Mutton",
 	"item.staticpower.smutton_cooked": "Cooked S'Mutton",
+	"item.staticpower.eeef_raw": "Raw Eeef",
+	"item.staticpower.eeef_cooked": "Cooked Eeef",
+	"item.staticpower.eather": "Eather",
 	"item.staticpower.crop_static": "Static Crop",
 	"item.staticpower.crop_energized": "Energized Crop",
 	"item.staticpower.crop_lumum": "Lumum Crop",
@@ -456,7 +459,8 @@
 	"item.staticpower.upgrade_quarrying_lumum": "Lumum Quarry Upgrade",
 	"item.staticpower.portable_smelting_core": "Portable Smelting Core",
 	"item.staticpower.bed_frame": "Bed Frame",
-	"item.staticpower.egg_smeep": "Smeep Spawn Egg",
+	"item.staticpower.egg_smeep": "S'Meep Spawn Egg",
+	"item.staticpower.egg_enox": "Enox Spawn Egg",
 	"block.staticpower.grass_static": "Static Grass",
 	"block.staticpower.grass_energized": "Energized Grass",
 	"block.staticpower.grass_lumum": "Lumum Static",
@@ -614,7 +618,7 @@
 	"block.staticpower.heat_sink_tin": "Tin Heat Sink",
 	"block.staticpower.heat_sink_silver": "Silver Heat Sink",
 	"block.staticpower.heat_sink_gold": "Gold Heat Sink",
-	"block.staticpower.smeep_wool": "Smeep Wool",
+	"block.staticpower.smeep_wool": "S'Meep Wool",
 	"fluid.staticpower.tree_sap": "Tree Sap",
 	"fluid.staticpower.infernal_tree_sap": "Infernal Tree Sap",
 	"fluid.staticpower.ethanol": "Ethanol",
@@ -727,6 +731,7 @@
 	"gui.staticpower.hold_control": "Hold Control",
 	"gui.staticpower.slots": "Slots",
 	"gui.staticpower.blocks": "Blocks",
+	"gui.staticpower.fuel_usage": "Fuel Usage",
 	"gui.staticpower.import_slots": "Import Slots",
 	"gui.staticpower.export_slots": "Export Slots",
 	"gui.staticpower.pump_rate_format": "Pumps every %1$s seconds",
@@ -746,5 +751,6 @@
 	"gui.staticpower.rainy": "Rainy",
 	"gui.staticpower.snowy": "Snowy",
 	"gui.staticpower.clear": "Clear",
-	"entity.staticpower.smeep": "S'Meep"
+	"entity.staticpower.smeep": "S'Meep",
+	"entity.staticpower.enox": "Enox"
 }
