Added JEI visualization for heat conductivity, generation, and overheating!

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -676,7 +676,8 @@
 	"gui.staticpower.heat_unit": "°H",
 	"gui.staticpower.heat_unit_per_tick": "°H/t",
 	"gui.staticpower.heat_transfer": "Heat Transfer",
-	"gui.staticpower.heat_conductivity": "C",
+	"gui.staticpower.heat": "Heat",
+	"gui.staticpower.heat_conductivity_unit": "C",
 	"gui.staticpower.side.top": "Top",
 	"gui.staticpower.side.bottom": "Bottom",
 	"gui.staticpower.side.front": "Front",
