--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -503,6 +503,7 @@
 	"block.staticpower.machine_evaporator": "Evaporator",
 	"block.staticpower.machine_condenser": "Condenser",
 	"block.staticpower.machine_vulcanizer": "Vulcanizer",
+	"block.staticpower.machine_turbine": "Turbine",
 	"block.staticpower.battery_block_basic": "Basic Battery",
 	"block.staticpower.battery_block_advanced": "Advanced Battery",
 	"block.staticpower.battery_block_static": "Static Battery",
