Refactoring auto crafting system to give users a choice on which recipe tree to use!

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -96,6 +96,13 @@
 	"item.staticpower.processor_energized": "Energized Processor",
 	"item.staticpower.processor_lumum": "Lumum Processor",
 	"item.staticpower.card_basic": "Basic Card",
+	"item.staticpower.turbine_blades_wood": "Wooden Turbine Blades",
+	"item.staticpower.turbine_blades_basic": "Basic Turbine Blades",
+	"item.staticpower.turbine_blades_advanced": "Advanced Turbine Blades",
+	"item.staticpower.turbine_blades_static": "Static Turbine Blades",
+	"item.staticpower.turbine_blades_energized": "Energized Turbine Blades",
+	"item.staticpower.turbine_blades_lumum": "Lumum Turbine Blades",
+	"item.staticpower.turbine_blades_creative": "Creative Turbine Blades",
 	"item.staticpower.card_advanced": "Advanced Card",
 	"item.staticpower.card_static": "Static Card",
 	"item.staticpower.card_energized": "Energized Card",
