Updated autocrafting to work with existing items. Dog isn't feeling too well. Please pray for her, she's my best friend!

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -708,6 +708,7 @@
 	"gui.staticpower.mode.output": "Output",
 	"gui.staticpower.mode.output2": "Primary Output",
 	"gui.staticpower.mode.output3": "Secondary Output",
+	"gui.staticpower.mode.output4": "Tertiary Output",
 	"gui.staticpower.mode.disabled": "Disabled",
 	"gui.staticpower.ticks": "Ticks",
 	"gui.staticpower.seconds": "Seconds",
@@ -751,8 +752,13 @@
 	"gui.staticpower.retriever_stack_size": "%1$d items per Extraction",
 	"gui.staticpower.cable_transfer_rate": "%1$d %2$s/s",
 	"gui.staticpower.max_transfer_rate": "Maximum Transfer Rate",
+	"gui.staticpower.max_power_rate": "Maximum Power Rate",
+	"gui.staticpower.max_fluid_rate": "Maximum Fluid Rate",
 	"gui.staticpower.item_cable_acceleration": "Acceleration: %1$d%%",
 	"gui.staticpower.item_cable_friction": "Friction: -%1$d%%",
+	"gui.staticpower.industrial_fluid_cable_warning": "Cannot connect directly to blocks!",
+	"gui.staticpower.next_recipe": "Next Recipe",
+	"gui.staticpower.previous_recipe": "Previous Recipe",
 	"gui.staticpower.day": "Day",
 	"gui.staticpower.sunset": "Sunset",
 	"gui.staticpower.night": "Night",
