Some graphical optimizations, added better tooltip to turbine blades. Added option to add turbine blades in the top slot of a turbine. Added option to not render block conig colors.

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -710,6 +710,7 @@
 	"gui.staticpower.mode.output3": "Secondary Output",
 	"gui.staticpower.mode.output4": "Tertiary Output",
 	"gui.staticpower.mode.disabled": "Disabled",
+	"gui.staticpower.mode.never": "N/A",
 	"gui.staticpower.ticks": "Ticks",
 	"gui.staticpower.seconds": "Seconds",
 	"gui.staticpower.seconds.short": "s",
