--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -535,6 +535,12 @@
 	"block.staticpower.cable_industrial_fluid_energized": "Energized Industrial Fluid Pipe",
 	"block.staticpower.cable_industrial_fluid_lumum": "Lumum Industrial Fluid Pipe",
 	"block.staticpower.cable_industrial_fluid_creative": "Creative Industrial Fluid Pipe",
+	"block.staticpower.cable_industrial_power_basic": "Industrial Power Cable",
+	"block.staticpower.cable_industrial_power_advanced": "Advanced Industrial Power Cable",
+	"block.staticpower.cable_industrial_power_static": "Static Industrial Power Cable",
+	"block.staticpower.cable_industrial_power_energized": "Energized Industrial Power Cable",
+	"block.staticpower.cable_industrial_power_lumum": "Lumum Industrial Power Cable",
+	"block.staticpower.cable_industrial_power_creative": "Creative Industrial Power Cable",
 	"block.staticpower.cable_item_basic": "Item Tube",
 	"block.staticpower.cable_item_advanced": "Advanced Item Tube",
 	"block.staticpower.cable_item_static": "Static Item Tube",
@@ -757,7 +763,7 @@
 	"gui.staticpower.max_fluid_rate": "Maximum Fluid Rate",
 	"gui.staticpower.item_cable_acceleration": "Acceleration: %1$d%%",
 	"gui.staticpower.item_cable_friction": "Friction: -%1$d%%",
-	"gui.staticpower.industrial_fluid_cable_warning": "Cannot connect directly to blocks!",
+	"gui.staticpower.industrial_cable_warning": "Cannot connect directly to machines!",
 	"gui.staticpower.next_recipe": "Next Recipe",
 	"gui.staticpower.previous_recipe": "Previous Recipe",
 	"gui.staticpower.day": "Day",
