Added packager. Added auto recipes for packager and added recipes for industrial power pipes. Minor tweaks and bug fixes!

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -511,6 +511,7 @@
 	"block.staticpower.machine_condenser": "Condenser",
 	"block.staticpower.machine_vulcanizer": "Vulcanizer",
 	"block.staticpower.machine_turbine": "Turbine",
+	"block.staticpower.machine_packager": "Packager",
 	"block.staticpower.battery_block_basic": "Basic Battery",
 	"block.staticpower.battery_block_advanced": "Advanced Battery",
 	"block.staticpower.battery_block_static": "Static Battery",
@@ -763,7 +764,7 @@
 	"gui.staticpower.max_fluid_rate": "Maximum Fluid Rate",
 	"gui.staticpower.item_cable_acceleration": "Acceleration: %1$d%%",
 	"gui.staticpower.item_cable_friction": "Friction: -%1$d%%",
-	"gui.staticpower.industrial_cable_warning": "Cannot connect directly to machines!",
+	"gui.staticpower.industrial_cable_warning": "Cannot supply directly to machines!",
 	"gui.staticpower.next_recipe": "Next Recipe",
 	"gui.staticpower.previous_recipe": "Previous Recipe",
 	"gui.staticpower.day": "Day",
