Added basic UI to power cables. More advanced to come for power and fluid and item cables!

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -735,7 +735,8 @@
 	"gui.staticpower.item_tier.netherite": "Netherite",
 	"gui.staticpower.tier": "Tier",
 	"gui.staticpower.ticks_remaining": "Ticks Remaining",
-	"gui.staticpower.missing_manager": "Manager Not Present!",
+	"gui.staticpower.manager_present": "Manager Present!",
+	"gui.staticpower.manager_missing": "Manager Not Present!",
 	"gui.staticpower.mining_tier": "Mining Tier",
 	"gui.staticpower.block_remaining": "Blocks Remaining",
 	"gui.staticpower.durability": "Durability",
