Updated pipeline and build script

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -15,11 +15,11 @@
 	"item.staticpower.wire_cutters_bronze": "Bronze Wire Cutters",
 	"item.staticpower.wire_cutters_tungsten": "Tungsten Wire Cutters",
 	"item.staticpower.wire_cutters_creative": "Creative Wire Cutters",
-	"item.staticpower.metal_hammer_iron": "Iron Forge Hammer",
-	"item.staticpower.metal_hammer_zinc": "Zinc Forge Hammer",
-	"item.staticpower.metal_hammer_bronze": "Bronze Forge Hammer",
-	"item.staticpower.metal_hammer_tungsten": "Tungsten Forge Hammer",
-	"item.staticpower.metal_hammer_creative": "Creative Forge Hammer",
+	"item.staticpower.hammer_iron": "Iron Hammer",
+	"item.staticpower.hammer_zinc": "Zinc Hammer",
+	"item.staticpower.hammer_bronze": "Bronze Hammer",
+	"item.staticpower.hammer_tungsten": "Tungsten Hammer",
+	"item.staticpower.hammer_creative": "Creative Hammer",
 	"item.staticpower.soldering_iron": "Soldering Iron",
 	"item.staticpower.soldering_iron_electric": "Electric Soldering Iron",
 	"item.staticpower.saw_iron": "Iron Saw",
@@ -221,6 +221,7 @@
 	"item.staticpower.rod_coal": "Coal Rod",
 	"item.staticpower.rod_quartz": "Quartz Rod",
 	"item.staticpower.rod_lapis": "Lapis Rod",
+	"item.staticpower.rod_latex": "Latex Rod",
 	"item.staticpower.chunks_copper": "Copper Ore Chunks",
 	"item.staticpower.chunks_gold": "Gold Ore Chunks",
 	"item.staticpower.chunks_iron": "Iron Ore Chunks",
@@ -779,6 +780,7 @@
 	"gui.staticpower.metric_minutes": "Minutes",
 	"gui.staticpower.metric_hours": "Hours",
 	"gui.staticpower.metric_real_time": "Real Time",
+	"gui.staticpower.hammering": "Hammer",
 	"entity.staticpower.smeep": "S'Meep",
 	"entity.staticpower.enox": "Enox"
 }
