Updated some textures and some recipes!

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -17,6 +17,8 @@
 	"item.staticpower.wire_cutters_creative": "Creative Wire Cutters",
 	"item.staticpower.hammer_iron": "Iron Hammer",
 	"item.staticpower.hammer_zinc": "Zinc Hammer",
+	"item.staticpower.hammer_copper": "Copper Hammer",
+	"item.staticpower.hammer_tin": "Tin Hammer",
 	"item.staticpower.hammer_bronze": "Bronze Hammer",
 	"item.staticpower.hammer_tungsten": "Tungsten Hammer",
 	"item.staticpower.hammer_creative": "Creative Hammer",
