Fixed issue with there not being an option to charge the mining drill and chain saw at lower tiers. Battery blocks will now charge a single item.

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -783,6 +783,7 @@
 	"gui.staticpower.metric_hours": "Hours",
 	"gui.staticpower.metric_real_time": "Real Time",
 	"gui.staticpower.hammering": "Hammer",
+	"gui.staticpower.battery_block_charging_tooltip": "Can charge a single item at a time!",
 	"entity.staticpower.smeep": "S'Meep",
 	"entity.staticpower.enox": "Enox"
 }
