Added promoted attribute to drills and chainsaws! Fixed power usage issue on drill and chainsaw.

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -682,6 +682,7 @@
 	"attribute.staticpower.hardened_ruby": "Hardened",
 	"attribute.staticpower.hardened_sapphire": "Hardened",
 	"attribute.staticpower.hardened_emerald": "Hardened",
+	"attribute.staticpower.promoted": "Promoted",
 	"gui.staticpower.empty": "Empty",
 	"gui.staticpower.input": "Input",
 	"gui.staticpower.max_input": "Max Input",
