--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -399,6 +399,7 @@
 	"item.staticpower.cable_attachment_digistore_crafting_interface": "Crafting Interface",
 	"item.staticpower.cable_attachment_digistore_light": "Light Panel",
 	"item.staticpower.cable_attachment_digistore_screen": "Screen",
+	"item.staticpower.cable_attachment_sprinkler": "Sprinkler",
 	"item.staticpower.digistore_card_basic": "Basic Digistore Card",
 	"item.staticpower.digistore_card_advanced": "Advanced Digistore Card",
 	"item.staticpower.digistore_card_static": "Static Digistore Card",
@@ -785,6 +786,9 @@
 	"gui.staticpower.metric_real_time": "Real Time",
 	"gui.staticpower.hammering": "Hammer",
 	"gui.staticpower.battery_block_charging_tooltip": "Can charge a single item at a time!",
+	"gui.staticpower.sprinkler_growth_rate": "When attached to a pipe\ncontaining water, keeps\nfarmland watered and\nincreases the rate\nof plant growth!",
+	"gui.staticpower.sprinkler_additional_growth_rate": "Other fluids may provide\nbetter results!",
+	"gui.staticpower.sprinkler_water_growth_rate": "Water Growth Bonus: ",
 	"entity.staticpower.smeep": "S'Meep",
 	"entity.staticpower.enox": "Enox"
 }
