Added cauldron recipes! Added new clean cauldron type. Added JEI handler for cauldron recipes. Added rusted Iron ore to world gen. Improved vacuum chest performance. Fixed issue with Item Filter not saving after world closing. Rendering improvments and minor bug fixes!

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -58,6 +58,7 @@
 	"item.staticpower.diode": "Diode",
 	"item.staticpower.io_port": "I/O Port",
 	"item.staticpower.transistor": "Transistor",
+	"item.staticpower.rusty_iron_scrap": "Rusty Iron Scrap",
 	"item.staticpower.blade_iron": "Iron Blade",
 	"item.staticpower.blade_bronze": "Bronze Blade",
 	"item.staticpower.blade_advanced": "Advanced Blade",
@@ -518,6 +519,7 @@
 	"block.staticpower.machine_packager": "Packager",
 	"block.staticpower.experience_hopper": "Experience Hopper",
 	"block.staticpower.rusty_cauldron": "Rusty Cauldron",
+	"block.staticpower.clean_cauldron": "Cauldron 2.0",
 	"block.staticpower.battery_block_basic": "Basic Battery",
 	"block.staticpower.battery_block_advanced": "Advanced Battery",
 	"block.staticpower.battery_block_static": "Static Battery",
@@ -591,6 +593,7 @@
 	"block.staticpower.ore_aluminium": "Aluminium Ore",
 	"block.staticpower.ore_ruby": "Ruby Ore",
 	"block.staticpower.ore_sapphire": "Sapphire Ore",
+	"block.staticpower.ore_rusty_iron": "Rusted Iron Ore",
 	"block.staticpower.block_copper": "Copper Block",
 	"block.staticpower.block_tin": "Tin Block",
 	"block.staticpower.block_zinc": "Zinc Block",
