Added in hopper conveyor! Cleaned up the rest of the conveyors and added animated top texture indicating direction of the conveyor belt. Cleaned up physics and rendering code. Items now render on the conveyor flat. Optimized heavily, now items can stack up on the conveyor.

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -646,6 +646,10 @@
 	"block.staticpower.heat_sink_silver": "Silver Heat Sink",
 	"block.staticpower.heat_sink_gold": "Gold Heat Sink",
 	"block.staticpower.smeep_wool": "S'Meep Wool",
+	"block.staticpower.conveyor_straight": "Conveyor",
+	"block.staticpower.conveyor_extractor": "Conveyor Supplier",
+	"block.staticpower.conveyor_supplier": "Conveyor Consumer",
+	"block.staticpower.conveyor_hopper": "Conveyor Hopper",
 	"fluid.staticpower.tree_sap": "Tree Sap",
 	"fluid.staticpower.infernal_tree_sap": "Infernal Tree Sap",
 	"fluid.staticpower.ethanol": "Ethanol",
