--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -651,6 +651,8 @@
 	"block.staticpower.conveyor_supplier": "Conveyor Consumer",
 	"block.staticpower.conveyor_hopper": "Conveyor Hopper",
 	"block.staticpower.conveyor_hopper_filtered": "Filtered Conveyor Hopper",
+	"block.staticpower.conveyor_ramp_down": "Conveyor Slope Down",
+	"block.staticpower.conveyor_ramp_up": "Conveyor Slope Up",
 	"fluid.staticpower.tree_sap": "Tree Sap",
 	"fluid.staticpower.infernal_tree_sap": "Infernal Tree Sap",
 	"fluid.staticpower.ethanol": "Ethanol",
